🔥 Remove VSCode settings files
- 🔧 Update .gitignore to exclude .vscode directory
- 🧹 Clean up project configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@ evaluation_results_field_of_invention.csv
 evaluation_results_summary.csv
 .replit
 replit.nix
-
+.vscode
 # windsurf rules
 .windsurfrules
