✨ Add embodiment approval endpoint
- 🔧 Implement ApprovedEmbodiment model with type and content structure
- 🗃️ Create DynamoDB update logic to append embodiments to list
- 🐛 Fix gitignore to exclude experiments directory

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ replit.nix
 .vscode
 # windsurf rules
 .windsurfrules
+.ide-agent-tasks/dynamodb-list-patent-projects-endpoint.md
+.ide-agent-tasks/files-retrieval-enhancement.md
+experiments/
+
