🏗️ fix(ocr): enforce strict typing in embodiment categorization
- Add type validation for categorize_detailed_description
- Fix tuple iteration issue in embodiment processing
- Update import paths for proper module resolution
- Prevent dict conversion fallbacks to ensure type safety

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,4 @@ replit.nix
 .ide-agent-tasks/dynamodb-list-patent-projects-endpoint.md
 .ide-agent-tasks/files-retrieval-enhancement.md
 experiments/
-
+experiments/ald_gvhd_patent_embodiments.csv
