:sparkles: Add raw sections endpoint and Supabase integration
• Added GET /api/v1/raw-sections/{patent_id} endpoint returning RawSectionsResponse.
• Upsert and fetch raw section text using column section_type.
• Made glossary optional in PatentUploadResponse to fix validation errors when absent.
• Added helper scripts: test_covid_upload.py, fetch_raw_sections.py, extract_patent_sections utilities.
• Updated OCR pipeline header detection logic; removed md field references.
• Adjusted .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@ replit.nix
 .ide-agent-tasks/files-retrieval-enhancement.md
 experiments/
 experiments/ald_gvhd_patent_embodiments.csv
+processing_stats.json
+patent.json
+pages_5_38_chunks.json
+pages_5_38_chunks.csv
+labeled_chunks_dataset.json
+labeled_chunks_dataset.jsonl
+labeled_all_chunks_concurrent.jsonl
+invention_principles.json
