🐛 Fix Pydantic validation error and ✨ implement page-based source tracing
- Fix type mismatch in PatentUploadResponse terms field by converting GlossarySubsectionPage to Glossary
- Add new /api/v1/pages/{patent_id} endpoint for page-based patent content retrieval
- Implement page data storage in new 'pages' table during document processing
- Update process_patent_document to return segmented_pages for source tracing
- Add PageData and PageBasedSectionsResponse models for page-organized responses
- Enable click-to-navigate functionality from embodiments to source pages

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ labeled_chunks_dataset.json
 labeled_chunks_dataset.jsonl
 labeled_all_chunks_concurrent.jsonl
 invention_principles.json
+.windsurf/rules/fastapi-server.md
+.windsurf/workflows/start-server.md
