--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ replit.nix
 .windsurfrules
 .ide-agent-tasks/dynamodb-list-patent-projects-endpoint.md
 .ide-agent-tasks/files-retrieval-enhancement.md
+experiments/
 experiments/ald_gvhd_patent_embodiments.csv
 processing_stats.json
 patent.json
