Add integration and utility tests for embodiment status and migration

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ labeled_all_chunks_concurrent.jsonl
 invention_principles.json
 .windsurf/rules/fastapi-server.md
 .windsurf/workflows/start-server.md
+.claude/settings.local.json
+.claude/
